--- a/bezukladnikov/my_page/templates/my_page/about.html
+++ b/bezukladnikov/my_page/templates/my_page/about.html
@@ -1,10 +1,6 @@
 {% extends 'my_page/base.html' %}
 
 {% block content %}
-<h1>
-    {{title}}
-</h1>
-<p>
-    About me
-</p>
+<h1>{{title}}</h1>
+<p>Содержимое страницы о сайте
 {% endblock %}
