--- a/bezukladnikov/my_page/templates/my_page/index.html
+++ b/bezukladnikov/my_page/templates/my_page/index.html
@@ -1,10 +1,15 @@
 {% extends 'my_page/base.html' %}
 
 {% block content %}
-<h1>
-    {{title}}
-</h1>
-<p>
-    Content main page
-</p>
+<ul class="list-articles">
+	{% for p in posts %}
+			<li><h2>{{p.title}}</h2>
+	{% autoescape on %}
+	{{p.content|linebreaks|truncatewords:50}}
+	{% endautoescape %}
+			<div class="clear"></div>
+			<p class="link-read-post"><a href="#">Читать пост</a></p>
+			</li>
+	{% endfor %}
+</ul>
 {% endblock %}
