--- a/bezukladnikov/my_page/templates/my_page/project.html
+++ b/bezukladnikov/my_page/templates/my_page/project.html
@@ -1,16 +1,27 @@
 {% extends 'my_page/base.html' %}
 
 {% block content %}
-<h1>{{title}}</h1>
-
-<ul>
-    {% for p in projects %}
-    <li>
-        <h2>{{p.title}}</h2>
-        <p>{{p.content}}</p>
-        <hr>
-    </li>
-    {% endfor %}
+<ul class="list-articles">
+	{% for p in projects %}
+			<li><h2>{{p.title}}</h2>
+	{% autoescape on %}
+	{{p.content|linebreaks|truncatewords:50}}
+	{% endautoescape %}
+			<div class="clear"></div>
+			<p class="link-read-post"><a href="#">Подробности</a></p>
+			</li>
+	{% endfor %}
 </ul>
+<!--<h1>{{title}}</h1>-->
+
+<!--<ul>-->
+<!--    {% for p in projects %}-->
+<!--    <li>-->
+<!--        <h2>{{p.title}}</h2>-->
+<!--        <p>{{p.content}}</p>-->
+<!--        <hr>-->
+<!--    </li>-->
+<!--    {% endfor %}-->
+<!--</ul>-->
 
 {% endblock %}
