--- a/bezukladnikov/my_page/templates/my_page/base.html
+++ b/bezukladnikov/my_page/templates/my_page/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load my_page_tags %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,6 +33,8 @@
 <tr>
 <!-- Sidebar слева -->
 	<td valign="top" class="left-chapters">
+<!--		{% getcities filter=1 %} передача параметра для простого тега-->
+<!--		{% getcities as cities %} делал через простой тег-->
 	<ul id="leftchapters">
 {% if cat_selected == 0 %}
 		<li class="selected">All Cities</li>
@@ -39,13 +42,10 @@
 		<li><a href="{% url 'home' %}">All Cities</a></li>
 {% endif %}
 
-{% for c in cats %}
-	{% if c.pk == cat_selected %}
-		<li class="selected">{{c.name}}</li>
-	{% else %}
-		<li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
-	{% endif %}
-{% endfor %}
+<!--Передаем вложенный тег с двумя аргументами. Первый говорит о том, что фильтрация будет происходить по имени и минус
+указывает, что в обратном порядке.
+Второй показаывать какой город выбран, чтобы его на странице выводить как текст-->
+{% show_cities '-name' cat_selected %}
 
 		<li class="share">
 		<p>Наш канал</p>
