--- a/bezukladnikov/my_page/templates/my_page/base.html
+++ b/bezukladnikov/my_page/templates/my_page/base.html
@@ -47,10 +47,10 @@
 Второй показаывать какой город выбран, чтобы его на странице выводить как текст-->
 {% show_cities '-name' cat_selected %}
 
-		<li class="share">
-		<p>Наш канал</p>
-		<a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>
-		</li>
+<!--		<li class="share">-->
+<!--		<p>Наш канал</p>-->
+<!--		<a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>-->
+<!--		</li>-->
 	</ul>
 </td>
 <!-- Конец Sidebar'а -->
