added file utils

--- a/bezukladnikov/my_page/templates/my_page/base.html
+++ b/bezukladnikov/my_page/templates/my_page/base.html
@@ -42,11 +42,24 @@
 		<li><a href="{% url 'home' %}">All Cities</a></li>
 {% endif %}
 
-<!--Передаем вложенный тег с двумя аргументами. Первый говорит о том, что фильтрация будет происходить по имени и минус
-указывает, что в обратном порядке.
-Второй показаывать какой город выбран, чтобы его на странице выводить как текст-->
-{% show_cities '-name' cat_selected %}
+<!--		Вывод списка городов через пользовательский тег. -->
+<!--&lt;!&ndash;Передаем вложенный тег с двумя аргументами. Первый говорит о том, что фильтрация будет происходить по имени и минус-->
+<!--указывает, что в обратном порядке.-->
+<!--Второй показаывать какой город выбран, чтобы его на странице выводить как текст&ndash;&gt;-->
+<!--{% show_cities '-name' cat_selected %}-->
 
+<!--		Вывод списка городов через класс Mixin-->
+
+{% for c in city %}
+<!--		будут показаны только те города в которых есть площадки-->
+{% if c.sportsground__count > 0 %}
+		{% if c.pk == cat_selected %}
+			<li class="selected">{{c.name}}</li>
+		{% else %}
+			<li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
+		{% endif %}
+{% endif %}
+{% endfor %}
 <!--		<li class="share">-->
 <!--		<p>Наш канал</p>-->
 <!--		<a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>-->
