--- a/bezukladnikov/my_page/templates/my_page/base.html
+++ b/bezukladnikov/my_page/templates/my_page/base.html
@@ -17,12 +17,10 @@
 			<ul id="mainmenu" class="mainmenu">
 			<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
 {% for m in menu %}
-	{% if not forloop.last %}
 			<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% else %}
-			<li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% endif %}
+
 {% endfor %}
+			<li class="last"><a href="{% url 'register' %}">Sign up</a> | <a href="{% url 'login' %}">Sign in</a></li>
 			</ul>
 			<div class="clear"></div>
 		</div>
