--- a/bezukladnikov/my_page/templates/my_page/base.html
+++ b/bezukladnikov/my_page/templates/my_page/base.html
@@ -20,7 +20,11 @@
 			<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
 
 {% endfor %}
+			{% if request.user.is_authenticated %}
+				<li class="last"> {{user.username}} | <a href="{% url 'logout' %}">Sign out</a></li>
+			{% else %}
 			<li class="last"><a href="{% url 'register' %}">Sign up</a> | <a href="{% url 'login' %}">Sign in</a></li>
+			{% endif %}
 			</ul>
 			<div class="clear"></div>
 		</div>
